# rust-off

./: .editorconfig  .gitignore  COPYRIGHT.md  Cargo.toml  LICENSE_APACHE  LICENSE_MIT  README.md  docker-compose.yml  rustfmt.toml
.devcontainer/: Dockerfile.rust  docker-compose.yml
.devcontainer/node-container/: devcontainer.json
.devcontainer/rust-container/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: rust.yml
crates/base-db/: Cargo.toml
crates/base-db/src/: change.rs  input.rs  lib.rs
crates/base-db/src/db/: root_query.rs
crates/edition/: Cargo.toml
crates/edition/src/: lib.rs
crates/hir/: Cargo.toml
crates/hir-def/: Cargo.toml
crates/hir-def/src/: builtin_type.rs  db.rs  expr_store.rs  files.rs  hir.rs  hir_expand.rs  item_tree.rs  lib.rs  name.rs  nameres.rs  src.rs  test_db.rs
crates/hir-def/src/expr_store/: body.rs  lower.rs
crates/hir-def/src/item_tree/: file_item_tree_id.rs  item_tree_data.rs  item_tree_node.rs  lower.rs
crates/hir-def/src/nameres/: collector.rs
crates/hir-expand/: Cargo.toml
crates/hir-expand/src/: files.rs  lib.rs
crates/hir-ty/: Cargo.toml
crates/hir-ty/src/: db.rs  display.rs  infer.rs  lib.rs  test_db.rs  tests.rs
crates/hir-ty/src/tests/: simple.rs
crates/hir/src/: lib.rs
crates/intern/: Cargo.toml
crates/intern/src/: lib.rs  symbol.rs
crates/intern/src/symbol/: symbols.rs
crates/lexer/: Cargo.toml
crates/lexer/src/: cursor.rs  cursor.tests.rs  lib.rs  tests.rs  token.rs  unescape.rs
crates/lexer/test_data/ok/: README.md  pdf_7_2_3_character_set.rast  pdf_7_2_4_comments.rast  pdf_7_3_10_indirect_objects.rast  pdf_7_3_10_indirect_references.rast  pdf_7_3_2_booleans.rast  pdf_7_3_3_numbers.rast  pdf_7_3_4_strings.rast  pdf_7_3_5_names.rast  pdf_7_3_6_arrays.rast  pdf_7_3_7_dictionaries.rast  pdf_7_3_8_streams.rast  pdf_7_3_9_null.rast  pdf_7_5_4_xref_table.rast  pdf_7_5_5_file_trailer.rast  safedocs_pdf_syntax_tests.rast
crates/lexer/tests/: safedocs_pdf_syntax_tests.csv  safedocs_pdf_syntax_tests.rs
crates/limit/: Cargo.toml
crates/limit/src/: lib.rs
crates/parser/: Cargo.toml
crates/parser/src/: event.rs  grammar.rs  input.rs  lexed_str.rs  lib.rs  output.rs  parser.rs  shortcuts.rs  syntax_kind.rs  tests.rs  token_set.rs
crates/parser/src/grammar/: atom.rs  expressions.rs  items.rs
crates/parser/src/grammar/expressions/: atom.rs
crates/parser/src/syntax_kind/: generated.rs
crates/parser/test_data/lexer/ok/: 7-3-2-booleans.rast  7-3-3-numerics.rast  7-3-4-strings.rast  7-3-5-names.rast  7-3-7-dictionary.rast  7-3-8-streams.rast  7-3-9-null.rast  pdf_7_2_3_character_set.rast  pdf_7_2_4_comments.rast  pdf_7_3_10_indirect_objects.rast  pdf_7_3_10_indirect_references.rast  pdf_7_3_3_numbers.rast  pdf_7_3_4_strings.rast  pdf_7_3_6_arrays.rast  pdf_7_3_7_dictionaries.rast  pdf_7_3_8_streams.rast  pdf_7_5_4_xref_table.rast  pdf_7_5_5_file_trailer.rast  safedocs_pdf_syntax_tests.rast  strings.rast
crates/parser/test_data/parser/ok/: pdf_7_2_3_character_set.rast  pdf_7_2_4_comments.rast  pdf_7_3_10_indirect_objects.rast  pdf_7_3_10_indirect_references.rast  pdf_7_3_2_booleans.rast  pdf_7_3_3_numbers.rast  pdf_7_3_4_strings.rast  pdf_7_3_5_names.rast  pdf_7_3_6_arrays.rast  pdf_7_3_7_dictionaries.rast  pdf_7_3_8_streams.rast  pdf_7_3_9_null.rast  pdf_7_5_4_xref_table.rast  pdf_7_5_5_file_trailer.rast  safedocs_pdf_syntax_tests.rast
crates/paths/: Cargo.toml
crates/paths/src/: lib.rs
crates/query-group-macro/: Cargo.toml
crates/rowan/: Cargo.toml
crates/rowan/examples/: math.rs  s_expressions.rs
crates/rowan/src/: api.rs  arc.rs  cursor.rs  syntax_text.rs
crates/rowan/src/green/: builder.rs  node.rs  node_cache.rs  token.rs
crates/rowan/xtask/: Cargo.toml
crates/semantic/: Cargo.toml
crates/semantic/src/: db.rs
crates/semantic/src/db/: file_db.rs  root_query.rs  source_db.rs
crates/span/: Cargo.toml
crates/span/src/: ast_id.rs  hygiene.rs  lib.rs
crates/stdx/: Cargo.toml
crates/stdx/src/: assert.rs  lib.rs  macros.rs
crates/syntax/: Cargo.toml  pdf.ungram
crates/syntax/src/: ast.rs  lib.rs  parsing.rs  ptr.rs  syntax_error.rs  syntax_node.rs  validation.rs
crates/syntax/src/ast/: expr_ext.rs  generated.rs  token_ext.rs
crates/test-fixture/: Cargo.toml
crates/test-fixture/src/: lib.rs
crates/test-utils/: Cargo.toml
crates/test-utils/src/: fixture.rs  lib.rs
crates/vfs/: Cargo.toml
crates/vfs/src/: anchored_path.rs  lib.rs  loader.rs  vfs_path.rs
crates/vfs/src/vfs_path/: tests.rs
editors/code/: .gitignore  CHANGELOG.md  README.md  eslint.config.mjs  language-configuration.json  package-lock.json  package.json  tsconfig.json
editors/code/src/: extension.ts  main.ts
editors/code/syntaxes/: pdf.tmLanguage.json
lsp-sever/: Cargo.toml
lsp-sever/src/: lib.rs  msg.rs  req_queue.rs  socket.rs  stdio.rs
pdfc-lexer/: Cargo.toml
pdfc-lexer/src/: cursor.rs  lib.rs  token.rs
pdfc-wasm/: Cargo.toml
pdfc-web/: package.json  pnpm-lock.yaml
pdfc-web/src/: App.tsx
web/: eslint.config.mjs  package.json  vite.config.ts
xtask/: Cargo.toml
xtask/src/: codegen.rs  flags.rs  main.rs  util.rs
xtask/src/codegen/: grammar.rs  lexer_tests.rs  parser_tests.rs
xtask/src/codegen/grammar/: ast_src.rs
