[workspace]
members = ["xtask/", "crates/*"]
resolver = "2"

[workspace.package]
rust-version = "1.81"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Victor Pogor"]
repository = "https://github.com/victor-pogor/rust-off"

[profile.dev]
debug = "full" # This is the default.
incremental = true
# opt-level = 0 # 0 is faster, 3 is slower but more optimized.
# overflow-checks = false # Disable integer overflow checks.

[profile.dev.package]
# These speed up local tests.
rowan.opt-level = 3
rustc-hash.opt-level = 3
smol_str.opt-level = 3
text-size.opt-level = 3
serde.opt-level = 3
salsa.opt-level = 3
# This speeds up `cargo xtask dist`.
miniz_oxide.opt-level = 3

[profile.release]
incremental = true
# Set this to 1 or 2 to get more useful backtraces in debugger.
debug = 0

[workspace.dependencies]
# local crates
base-db = { path = "./crates/base-db", version = "0.0.0" }
stdx = { path = "./crates/stdx", version = "0.0.0" }
pdfc-lexer = { path = "./crates/lexer", version = "0.0.0" }
edition = { path = "./crates/edition", version = "0.0.0" }
pdfc-parser = { path = "./crates/parser", version = "0.0.0" }
limit = { path = "./crates/limit", version = "0.0.0" }
rowan = { path = "./crates/rowan", version = "0.16.1" }
vfs = { path = "./crates/vfs", version = "0.0.0" }
paths = { path = "./crates/paths", version = "0.0.0" }
query-group = { package = "query-group-macro", path = "./crates/query-group-macro", version = "0.0.0" }
span = { path = "./crates/span", version = "0.0.0" }
pdfc-syntax = { path = "./crates/syntax", version = "0.0.0" }
hir = { path = "./crates/hir", version = "0.0.0" }
hir-ty = { path = "./crates/hir-ty", version = "0.0.0" }
intern = { path = "./crates/intern", version = "0.0.0" }

# non-local crates
anyhow = "1.0.97"
xshell = "0.2.7"
itertools = "0.14.0"
either = "1.15.0"
tracing = "0.1.41"
indexmap = { version = "2.8.0", features = ["serde"] }
rustc-hash = "2.1.1"
nohash-hasher = "0.2.0"
crossbeam-channel = "0.5.14"
salsa = "0.19"
triomphe = { version = "0.1.14", default-features = false, features = ["std"] }
la-arena = { version = "0.3.1" }
text-size = "1.1.1"
cargo-llvm-cov = "0.6.16"
expect-test = "1.5.1"

# We need to freeze the version of the crate, as the raw-api feature is considered unstable
dashmap = { version = "=5.5.3", features = ["raw-api"] }
# We need to freeze the version of the crate, as it needs to match with dashmap
hashbrown = { version = "=0.14.5", features = [
  "inline-more",
], default-features = false }

[workspace.lints.rust]
# remember to update RUSTFLAGS in ci.yml if you add something here

elided_lifetimes_in_paths = "warn"
explicit_outlives_requirements = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_extern_crates = "warn"
unused_lifetimes = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
## lint groups
complexity = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
restriction = { level = "allow", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }

## warn at following lints
# CI raises these to deny
todo = "warn"
print_stdout = "warn"
print_stderr = "warn"
