[package]
name = "base-db"
version = "0.0.0"
description = "Basic database traits for pdf-analyzer."

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
# Non-local deps
salsa.workspace = true
triomphe.workspace = true
tracing.workspace = true
la-arena.workspace = true
rustc-hash.workspace = true
semver.workspace = true
dashmap.workspace = true

# Local deps
vfs.workspace = true
query-group.workspace = true
span.workspace = true
pdfc-syntax.workspace = true

[dev-dependencies]
# Non-local deps

# Local deps

[lints]
workspace = true
