[package]
name = "base-db"
description = "Base database for the PDF analyzer"
version = "0.0.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
# non-local crates
dashmap.workspace = true
rustc-hash.workspace = true
salsa.workspace = true
salsa-macros.workspace = true
tracing.workspace = true
triomphe.workspace = true

# local crates
syntax.workspace = true
vfs.workspace = true

[dev-dependencies]
# non-local crates

# local crates

[lints]
workspace = true
