[package]
name = "hir-def"
description = "RPC Api for the `proc-macro-srv` crate of pdf-analyzer."
version = "0.0.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
# non-local crates
la-arena.workspace = true
smallvec.workspace = true

# local crates
intern.workspace = true
syntax.workspace = true

[dev-dependencies]
# non-local crates

# local crates

[lints]
workspace = true
