[package]
name = "hir-ty"
version = "0.0.0"
description = "The type system for pdf-analyzer."

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
# Non-local deps
tracing.workspace = true

# Local deps
hir-def.workspace = true

[dev-dependencies]
# Non-local deps
expect-test.workspace = true
tracing-tree.workspace = true
tracing-subscriber.workspace = true

# Local deps

[lints]
workspace = true
