[package]
name = "hir"
version = "0.0.0"
description = "A high-level object-oriented access to PDF code for pdf-analyzer."

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
# Add any dependencies required for your project here


[dev-dependencies]
# Add any development dependencies here

[lints]
workspace = true
