[package]
name = "hir"
description = "A high-level object-oriented access to PDF code for pdf-analyzer."
version = "0.0.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
# non-local crates

# local crates

[dev-dependencies]
# non-local crates

# local crates

[lints]
workspace = true
