[package]
name = "intern"
version = "0.0.0"
description = "Global `Arc`-based object interning infrastructure for rust-analyzer."

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
# Non-local deps
triomphe.workspace = true
dashmap.workspace = true
hashbrown.workspace = true
rustc-hash.workspace = true

# Local deps

[dev-dependencies]
# Non-local deps

# Local deps

[lints]
workspace = true
