[package]
name = "intern"
description = "Global `Arc`-based object interning infrastructure for rust-analyzer."
version = "0.0.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
# non-local crates

# local crates

[dev-dependencies]
# non-local crates

# local crates

[lints]
workspace = true
