[package]
name = "pdfc-lexer"
description = "PDF content lexer."

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]

[dev-dependencies]
csv = "1.3.1"
serde = { version = "1.0.218", features = ["derive"] }
stdx.workspace = true
expect-test.workspace = true

[lints]
workspace = true