[package]
name = "pdfc-lexer"
description = "PDF content lexer."

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
# Non-local deps

# Local deps

[dev-dependencies]
# Non-local deps
csv = "1.3.1"
serde = { version = "1.0.218", features = ["derive"] }

# Local deps
stdx.workspace = true
expect-test.workspace = true

[lints]
workspace = true
