[package]
name = "lexer"
description = "PDF content lexer."

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]

[lints]
workspace = true

[dev-dependencies]
# non-local crates
serde.workspace = true
expect-test.workspace = true

# local crates
stdx.workspace = true
