[package]
name = "limit"
version = "0.0.0"
description = "A struct to enforce limits for pdf-analyzer."

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
# Add any dependencies required for your project here

[dev-dependencies]
# Add any development dependencies here

[features]
tracking = []