[package]
name = "limit"
version = "0.0.0"
description = "A struct to enforce limits for pdf-analyzer."

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
# non-local crates

# local crates

[dev-dependencies]
# non-local crates

# local crates

[features]
tracking = []
