[package]
name = "pdfc-parser"
version = "0.1.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
# Add any dependencies required for your project here

[dev-dependencies]
# Add any development dependencies here
