[package]
name = "pdfc-parser"
version = "0.0.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
# Add any dependencies required for your project here
edition.workspace = true
pdfc-lexer.workspace = true
limit.workspace = true
tracing = { workspace = true, optional = true }
drop_bomb = "0.1.5"

[dev-dependencies]
# Add any development dependencies here
stdx.workspace = true
expect-test.workspace = true

[features]
default = ["tracing"]
in-rust-tree = []

[lints]
workspace = true
