[package]
name = "parser"
version = "0.0.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
# non-local crates
tracing = { workspace = true, optional = true }
drop_bomb.workspace = true

# local crates
edition.workspace = true
lexer.workspace = true
limit.workspace = true

[dev-dependencies]
# non-local crates
expect-test.workspace = true

# local crates
stdx.workspace = true

[features]
default = ["tracing"]
in-rust-tree = []
