[package]
name = "paths"
version = "0.0.0"
description = "Path wrappers for absolute and relative paths rust-analyzer."

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
# Add any dependencies required for your project here
camino.workspace = true

[dev-dependencies]
# Add any development dependencies here

[features]
serde1 = ["camino/serde1"]

[lints]
workspace = true
