[package]
name = "paths"
description = "Path wrappers for absolute and relative paths pdf-analyzer."
version = "0.0.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
# non-local crates
camino.workspace = true

# local crates

[dev-dependencies]
# non-local crates

# local crates

[features]
serde1 = ["camino/serde1"]

[lints]
workspace = true
