[package]
name = "rowan"
version = "0.16.1"
description = "Library for generic lossless syntax trees"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
rustc-hash = "2.1.1"
hashbrown = { version = "0.15.2", features = [
    "inline-more",
], default-features = false }
text-size = "1.1.0"
countme = "3.0.0"

serde = { version = "1.0.219", optional = true, default-features = false }

[dev-dependencies]
m_lexer = "0.0.4"

[features]
serde1 = ["serde", "text-size/serde"]
