[package]
name = "rowan"
version = "0.16.1"
description = "Library for generic lossless syntax trees"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
# local crates

# non-local crates
rustc-hash.workspace = true
hashbrown.workspace = true
text-size.workspace = true
countme.workspace = true
serde = {workspace = true, optional = true}

[dev-dependencies]
# local crates

# non-local crates
m_lexer.workspace = true

[features]
serde1 = ["serde", "text-size/serde"]
