[package]
name = "span"
version = "0.0.0"
description = "File and span related types for rust-analyzer."

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
la-arena.workspace = true
salsa.workspace = true
rustc-hash.workspace = true
hashbrown.workspace = true
text-size.workspace = true

# local deps
vfs.workspace = true
pdfc-syntax.workspace = true
stdx.workspace = true

[lints]
workspace = true
