[package]
name = "span"
description = "File and span related types for rust-analyzer."
version = "0.0.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
# non-local crates
hashbrown.workspace = true
la-arena.workspace = true
rustc-hash.workspace = true

# local crates
syntax.workspace = true


[dev-dependencies]
# non-local crates

# local crates

[lints]
workspace = true
