[package]
name = "stdx"
version = "0.0.0"
description = "Missing batteries for standard libraries for pdf-analyzer."

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
# local crates

# non-local crates

[dev-dependencies]
# local crates

# non-local crates
