[package]
name = "pdfc-syntax"
version = "0.0.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
# Add any dependencies required for your project here
pdfc-lexer.workspace = true
tracing.workspace = true
pdfc-parser.workspace = true
either.workspace = true
rowan.workspace = true

[dev-dependencies]
# Add any development dependencies here

[features]
in-rust-tree = []

[lints]
workspace = true
