[package]
name = "syntax"
version = "0.1.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
# local crates
lexer.workspace = true
tracing.workspace = true
parser.workspace = true
rowan.workspace = true

# non-local crates
either.workspace = true

[dev-dependencies]
# local crates

# non-local crates

[features]
in-rust-tree = []
