[package]
name = "test-utils"
version = "0.0.0"
description = "Assorted testing utilities for rust-analyzer"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
# Avoid adding deps here, this crate is widely used in tests it should compile fast!
# Non-local deps
text-size.workspace = true
stdx.workspace = true

# Local deps

[dev-dependencies]
# Non-local deps

# Local deps

[lints]
workspace = true
