[package]
name = "vfs"
description = "A virtual file system for pdf-analyzer."
version = "0.0.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
# non-local crates
indexmap.workspace = true
rustc-hash.workspace = true
tracing.workspace = true

# local crates
paths.workspace = true
stdx.workspace = true

[dev-dependencies]
# non-local crates

# local crates

[lints]
workspace = true
